[project]
name = "cyber-openenv"
version = "0.1.0"
description = "Cyber Defence OpenEnv environment"
authors = [
    { name = "Bhumika Warkhade" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
